Adicionando melhorias no código e arquivo para hospedagem

--- a/html/index.html
+++ b/html/index.html
@@ -46,8 +46,8 @@
             <div class="info">
               <hr>
               <label for="horas">Quantas horas pretende estudar por dia?</label>
-              <input type="text" id="horas">
-              <label for="quantidade_dias">Quantos dias pretende estudar?</label>
+              <input type="text" id="horas"><br><br>
+              <label for="quantidade_dias">Quantos dias pretende estudar por semana?</label>
               <select id="quantidade_dias">
                 <option value="1">1 dia</option>
                 <option value="2">2 dias</option>
