resolvendo bug na atualização da criação do ciclo.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
             <ul id="lista-materias"></ul>
 
             <div class="info">
-              <hr>
               <label for="horas">Quantas horas pretende estudar por dia?</label>
               <input type="text" id="horas"><br><br>
               <label for="quantidade_dias">Quantos dias pretende estudar por semana?</label>
@@ -61,6 +60,9 @@
               <input type="button" value="gerar PDF" onclick="criarPDF()">
             </div>
         </form>
+
+        <h2>Distribuição de Horas</h2>
+        <ul id="ciclo"></ul>
 
         <footer>
             <p>
